--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@
   }
 }
 
+.container {
+  width : 700
+  margin 20px auto;
+}
 
 body {
     display: block;
@@ -49,10 +53,10 @@ h2 {
 
 .card-white {
     background-color: white;
-    padding: 20px;
+    padding: 0px;
     box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
     border-radius: 4px;
-    margin: 80px 80px;
+    margin: 80px 0px;
     text-align: center;
 }
 
@@ -68,7 +72,7 @@ h2 {
 
 .list-inline > li {
   display: inline-block;
-  padding: 0px 20px;
+  padding: 0px 0px;
   text-align: center;
 
 }
@@ -82,16 +86,19 @@ h2 {
 
 ul {
   list-style-type: none;
-  margin: 50;
-  padding: 50;
+  margin: 100;
+  padding: 100;
   overflow: hidden;
   background-color: grey;
   text-align: center;
+  padding-left: 0px;
 
 }
 
 li {
   float: center;
+  display: inline-block;
+
 
 }
 
@@ -107,3 +114,6 @@ li a:hover {
   background-color: #393B3D;
 }
 
+i {
+  font-size: 50px;
+}
